--- a/main.yml
+++ b/main.yml
@@ -7,7 +7,7 @@ services:
        dockerfile: Dockerfile
        args:
          IMAGE_DISTRO: debian
-         IMAGE_VERSION: buster
+         IMAGE_VERSION: stable
      volumes:
        - ./output:/output
        - ./input:/input
